# loopwire

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  README.md  bun.lockb  moon.yml  package.json
.github/: README-GITHUB.md  README.md  labeler.yml  labels.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  coverage.yml  deploy.yml  docs-coverage.yml  labeler.yml  pr-governance.yml  prek.yml  release.yml  ship.yml  sync-labels.yml
.moon/: toolchain.yml  toolchains.yml  workspace.yml
.moon/tasks/: bun.yml  rust.yml
.qlty/: qlty.toml
apps/: README.md
apps/daemon/: Cargo.toml  README.md  moon.yml
apps/daemon/crates/: README.md
apps/daemon/crates/loopwired/: Cargo.toml
apps/daemon/crates/loopwired/src/: lib.rs  main.rs
apps/daemon/crates/lw-agent/: Cargo.toml
apps/daemon/crates/lw-agent/src/: activity.rs  claude.rs  codex.rs  gemini.rs  lib.rs  manager.rs  process.rs  prompt.rs  runner.rs  runners.rs  terminal_text.rs
apps/daemon/crates/lw-agent/src/manager/: reconcile.rs  recorder.rs  session.rs
apps/daemon/crates/lw-api/: Cargo.toml
apps/daemon/crates/lw-api/src/: auth.rs  error.rs  lib.rs  remote.rs  router.rs  state.rs
apps/daemon/crates/lw-api/src/remote/: crypto.rs  invite.rs  tunnel.rs
apps/daemon/crates/lw-api/src/rest/: agent.rs  auth.rs  bootstrap.rs  git.rs  health.rs  mod.rs  quota.rs  remote.rs  workspace.rs
apps/daemon/crates/lw-api/src/rest/git/: git_helpers.rs
apps/daemon/crates/lw-api/src/ws/: handler.rs  messages.rs  mod.rs  terminal.rs
apps/daemon/crates/lw-config/: Cargo.toml
apps/daemon/crates/lw-config/src/: daemon.rs  lan.rs  lib.rs  paths.rs  remote.rs
apps/daemon/crates/lw-fs/: Cargo.toml
apps/daemon/crates/lw-fs/src/: browse.rs  lib.rs  read.rs  security.rs  watch.rs
apps/daemon/crates/lw-pty/: Cargo.toml
apps/daemon/crates/lw-pty/src/: history.rs  lib.rs  manager.rs  platform.rs  reader.rs  session.rs
apps/daemon/crates/lw-pty/tests/: manager.rs  session_lifecycle.rs
apps/daemon/crates/lw-quota/: Cargo.toml
apps/daemon/crates/lw-quota/src/: lib.rs  migrations.rs  provider.rs  store.rs  tracker.rs
apps/web/: README.md  biome.json  eslint.config.mjs  index.html  moon.yml  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
apps/web/coverage/: TerminalPagingController.ts.html  index.html  lcov.info
apps/web/coverage/lcov-report/: TerminalPagingController.ts.html  index.html
apps/web/src/: App.tsx  index.css  main.tsx  routes.tsx  test-setup.ts
apps/web/src/__tests__/: App.test.tsx  main.test.tsx  routes.test.tsx
apps/web/src/features/agent/: AgentActivityIcon.tsx  AgentStatus.tsx  AgentToolbar.tsx  InlineAgentPicker.tsx  agent-icons.ts  useAgent.ts
apps/web/src/features/agent/__tests__/: AgentActivityIcon.component.test.tsx  AgentStatus.component.test.tsx  AgentToolbar.component.test.tsx  InlineAgentPicker.component.test.tsx  agentIcons.test.ts  useAgent.hook.test.ts  useAgent.test.ts
apps/web/src/features/agent/components/: AgentActivityIcon.tsx  AgentToolbar.tsx  InlineAgentPicker.tsx
apps/web/src/features/agent/hooks/: useAgent.ts
apps/web/src/features/agent/lib/: agentIcons.ts
apps/web/src/features/auth/: AuthGuard.tsx  AuthPage.tsx  ConnectPage.tsx  useAuth.ts
apps/web/src/features/auth/__tests__/: AuthGuard.component.test.tsx  AuthPage.component.test.tsx  ConnectPage.component.test.tsx  (+1 more)
apps/web/src/features/editor/: CodeEditor.tsx  DiffPeekWidget.ts  diffUtils.ts  useEditor.ts  useGitGutter.ts
apps/web/src/features/ide/: FilesPanelView.tsx  GitPanelView.tsx  SessionContextMenu.tsx  SessionIconPickerDialog.tsx  Sidebar.tsx  SplitPane.tsx  WorkspaceSidebar.tsx  WorkspaceView.tsx
apps/web/src/features/landing/: LandingPage.tsx  LoopwireLogo.tsx
apps/web/src/features/quota/: QuotaHistory.tsx  QuotaPanel.tsx  useQuota.ts
apps/web/src/features/sidebar/: AgentRunningBadge.tsx  AppSidebar.tsx  IconPickerDialog.tsx  WorkspaceContextMenu.tsx  WorkspaceIcon.tsx  WorkspaceItem.tsx  workspace-sidebar-utils.ts
apps/web/src/features/terminal/: ScrollbackOverlay.tsx  Terminal.tsx  TerminalPagingController.ts  useScrollback.ts  useTerminal.ts  useTerminalChannel.ts
apps/web/src/features/workspace/: FileTree.tsx  FileTreeNode.tsx  FolderBrowser.tsx  NewWorkspaceView.tsx  useFileSystem.ts  useGitStatus.ts  vscodeIcons.ts
apps/web/src/shared/hooks/: useDaemon.ts  useDaemonAvailable.ts  useWebSocket.ts
apps/web/src/shared/layout/: AppLayout.tsx  EmptyState.tsx  SettingsDialog.tsx
apps/web/src/shared/lib/: api.ts  config.ts  discovery.ts  icon-masking.ts  theme.ts  ws.ts
apps/web/src/shared/stores/: app-store-utils.ts  app-store.ts
apps/web/src/shared/ui/: Button.tsx  Dialog.tsx  LoopwireSpinner.tsx  Select.tsx  SlideDeleteButton.tsx  ThemeToggle.tsx  Tooltip.tsx
brand-assets/: README.md  generate.sh  site.webmanifest
scripts/: README.md  check-daemon-builds.sh  generate-paradox-logo.py  generate-types.sh  install.sh  test-logo.html
(+113 files in other folders)
