[package]
name = "loopwired"
version.workspace = true
edition.workspace = true

[[bin]]
name = "loopwired"
path = "src/main.rs"

[dependencies]
lw-api.workspace = true
lw-config.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
dirs.workspace = true
serde_json.workspace = true
reqwest.workspace = true
axum.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"
