[package]
name = "lw-agent"
version.workspace = true
edition.workspace = true

[dependencies]
lw-pty.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
