[package]
name = "lw-fs"
version.workspace = true
edition.workspace = true

[dependencies]
notify.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true
anyhow.workspace = true
thiserror.workspace = true
dirs.workspace = true
