[package]
name = "lw-fs"
version.workspace = true
edition.workspace = true

[dependencies]
notify.workspace = true
tokio.workspace = true
serde.workspace = true
tracing.workspace = true
uuid.workspace = true
anyhow.workspace = true
thiserror.workspace = true
dirs.workspace = true
base64 = "0.22"

[dev-dependencies]
tempfile.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
