[package]
name = "lw-quota"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
rusqlite.workspace = true
reqwest.workspace = true
anyhow.workspace = true
thiserror.workspace = true
